/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "ClearanceEventStreamElementPayloadProtos";

// Payload of a clearanceEvent stream element
message ClearanceEventStreamElementPayload {

    double length = 1; // Length of the clearance

    double velocity = 2; // Velocity of the clearance

    double angle = 3; // Angle of the clearance in degree (in playing direction)

    string direction = 4; // Direction category of the clearance (in playing direction)
}

// Object identifiers, group identifiers and positions in the content:
// objectIdentifiers[0] = Identifier of the player who kicked the ball
// objectIdentifiers[1] = Identifier of the player who received the ball (only if the clearance has been received)
// objectIdentifiers[0] = Identifier of the team whose player kicked the ball
// objectIdentifiers[1] = Identifier of the team whose player received the ball (only if the clearance has been received)
// positions[0] = Position where the ball has been kicked
// positions[1] = Position where the ball has been received or where the ball has left the field